<resources>
    <string name="app_name">MyRoomDatabase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="add">Add</string>
    <string name="age">Age</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>