<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp">

    <EditText
        android:id="@+id/edt_addFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_addLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/last_name"
        app:layout_constraintEnd_toEndOf="@+id/edt_addFirstName"
        app:layout_constraintStart_toStartOf="@+id/edt_addFirstName"
        app:layout_constraintTop_toBottomOf="@+id/edt_addFirstName" />

    <EditText
        android:id="@+id/edt_addAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/age"
        app:layout_constraintEnd_toEndOf="@+id/edt_addLastName"
        app:layout_constraintStart_toStartOf="@+id/edt_addLastName"
        app:layout_constraintTop_toBottomOf="@+id/edt_addLastName" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="@+id/edt_addAge"
        app:layout_constraintStart_toStartOf="@+id/edt_addAge"
        app:layout_constraintTop_toBottomOf="@+id/edt_addAge" />

</androidx.constraintlayout.widget.ConstraintLayout>