<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.UpdateFragment"
    android:padding="24dp">

    <EditText
        android:id="@+id/edt_updateFirstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_updateLastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/last_name"
        app:layout_constraintEnd_toEndOf="@+id/edt_updateFirstname"
        app:layout_constraintStart_toStartOf="@+id/edt_updateFirstname"
        app:layout_constraintTop_toBottomOf="@+id/edt_updateFirstname" />

    <EditText
        android:id="@+id/edt_updateAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/age"
        app:layout_constraintEnd_toEndOf="@+id/edt_updateLastname"
        app:layout_constraintStart_toStartOf="@+id/edt_updateLastname"
        app:layout_constraintTop_toBottomOf="@+id/edt_updateLastname" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="@+id/edt_updateAge"
        app:layout_constraintStart_toStartOf="@+id/edt_updateAge"
        app:layout_constraintTop_toBottomOf="@+id/edt_updateAge" />

</androidx.constraintlayout.widget.ConstraintLayout>